# DocDx

./: .env.example  .gitignore  README.md  chainlit.md  docker-compose.yml  pyproject.toml
app/: __init__.py  chainlit_app.py  config.py  main.py  streamlit_app.py
app/agents/: __init__.py  emergency_detector.py  explanation_agent.py  intake_agent.py  knowledge_agent.py  orchestrator.py  ranking_agent.py  retrieval_agent.py  state.py
app/data/medical_kb/: conditions.json  red_flags.json  specialties.json
app/data/seed/: doctors.json  reviews.json
app/db/: __init__.py  models.py  queries.py  session.py
app/rag/: __init__.py  embeddings.py  knowledge_store.py  profile_store.py
scripts/: build_vector_stores.py  generate_synthetic.py  seed_database.py
