[project]
name = "remedy-radar"
version = "0.1.0"
description = "Agentic health specialist finder — you describe how you feel, we find who can help."
requires-python = ">=3.11"
dependencies = [
    # LLM & Orchestration
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-ollama>=0.3.0",
    "instructor>=1.7.0",
    "openai>=1.60.0",          # Ollama exposes OpenAI-compatible API

    # RAG & Embeddings
    "chromadb>=1.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "geoalchemy2>=0.17.0",
    "alembic>=1.14.0",

    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # UI
    "streamlit>=1.36.0",

    # Utilities
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "geopy>=2.4.0",             # Nominatim geocoding wrapper

    # Evaluation
    "datasets>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
